--- a/cmd/network-interface-manager/Dockerfile
+++ b/cmd/network-interface-manager/Dockerfile
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM alpine:3.13
+FROM docker.io/alpine:3.17
 LABEL maintainer="support@kubermatic.com"
 
 COPY ./_build/network-interface-manager /usr/local/bin/network-interface-manager
