add short names for application crds
Signed-off-by: Vincent Gramer <vincent@kubermatic.com>

--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
@@ -13,6 +13,8 @@ spec:
     kind: ApplicationDefinition
     listKind: ApplicationDefinitionList
     plural: applicationdefinitions
+    shortNames:
+      - appdef
     singular: applicationdefinition
   scope: Cluster
   versions:
