--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
@@ -13,6 +13,8 @@ spec:
     kind: ApplicationInstallation
     listKind: ApplicationInstallationList
     plural: applicationinstallations
+    shortNames:
+      - appinstall
     singular: applicationinstallation
   scope: Namespaced
   versions:
