Update Azure CCM/CSI (#11969)
* bump Azure CCM

* bump Node Termination Handler

* update Disk CSI

* update File CSI

* update snapshot controller

* fix --port having been removed from the CCM

* fix image registry

--- a/pkg/resources/test/fixtures/deployment-azure-1.25.0-azure-cloud-controller-manager-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-azure-1.25.0-azure-cloud-controller-manager-externalCloudProvider.yaml
@@ -32,18 +32,18 @@ spec:
         - -timeout
         - "1"
         - -command
-        - '{"command":"cloud-controller-manager","args":["--allocate-node-cidrs=false","--configure-cloud-routes=false","--kubeconfig=/etc/kubernetes/kubeconfig/kubeconfig","--v=4","--cloud-config=/etc/kubernetes/cloud/config","--cloud-provider=azure","--leader-elect=true","--route-reconciliation-period=10s","--port=10267","--controllers=*,-cloud-node"]}'
+        - '{"command":"cloud-controller-manager","args":["--allocate-node-cidrs=false","--configure-cloud-routes=false","--kubeconfig=/etc/kubernetes/kubeconfig/kubeconfig","--v=4","--cloud-config=/etc/kubernetes/cloud/config","--cloud-provider=azure","--leader-elect=true","--route-reconciliation-period=10s","--secure-port=10258","--controllers=*,-cloud-node"]}'
         command:
         - /http-prober-bin/http-prober
         env:
         - name: SSL_CERT_FILE
           value: /etc/kubermatic/certs/ca-bundle.pem
-        image: mcr.microsoft.com/oss/kubernetes/azure-cloud-controller-manager:v1.24.0
+        image: mcr.microsoft.com/oss/kubernetes/azure-cloud-controller-manager:v1.25.9
         livenessProbe:
           failureThreshold: 3
           httpGet:
             path: /healthz
-            port: 10267
+            port: 10258
             scheme: HTTP
           initialDelaySeconds: 20
           periodSeconds: 10
