--- a/addons/csi/azure-file/csi-azurefile-controller.yaml
+++ b/addons/csi/azure-file/csi-azurefile-controller.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-# Source: https://github.com/kubernetes-sigs/azurefile-csi-driver/blob/v1.18.0/deploy/v1.18.0/csi-azurefile-controller.yaml
+# Source: https://github.com/kubernetes-sigs/azurefile-csi-driver/blob/v1.26.1/deploy/v1.26.1/csi-azurefile-controller.yaml
 #
 # Changes:
 # - image source includes registry templating
@@ -21,11 +21,11 @@
 # - add security context
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
 {{ if eq .Cluster.CloudProviderName "azure" }}
-{{ $version := "1.18.0" }}
+{{ $version := "1.26.1" }}
 
 ---
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: csi-azurefile-controller
   namespace: kube-system
@@ -49,7 +49,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: csi-provisioner
-          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-provisioner:v3.1.0" }}
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-provisioner:v3.3.0" }}
           args:
             - "-v=2"
             - "--csi-address=$(ADDRESS)"
@@ -57,6 +57,8 @@ spec:
             - "--leader-election-namespace=kube-system"
             - "--timeout=300s"
             - "--extra-create-metadata=true"
+            - "--kube-api-qps=50"
+            - "--kube-api-burst=100"
           env:
             - name: ADDRESS
               value: /csi/csi.sock
@@ -70,13 +72,15 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: csi-attacher
-          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-attacher:v3.4.0" }}
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-attacher:v4.0.0" }}
           args:
             - "-v=2"
             - "-csi-address=$(ADDRESS)"
             - "-timeout=120s"
             - "--leader-election"
             - "--leader-election-namespace=kube-system"
+            - "--kube-api-qps=50"
+            - "--kube-api-burst=100"
           env:
             - name: ADDRESS
               value: /csi/csi.sock
@@ -109,7 +113,7 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: csi-resizer
-          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-resizer:v1.4.0" }}
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-resizer:v1.6.0" }}
           args:
             - "-csi-address=$(ADDRESS)"
             - "-v=2"
@@ -131,7 +135,7 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: liveness-probe
-          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/livenessprobe:v2.6.0" }}
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/livenessprobe:v2.8.0" }}
           args:
             - --csi-address=/csi/csi.sock
             - --probe-timeout=3s
@@ -147,7 +151,7 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: azurefile
-          image: {{ Image (print "mcr.microsoft.com/k8s/csi/azurefile-csi:v" $version) }}
+          image: {{ Image (print "mcr.microsoft.com/oss/kubernetes-csi/azurefile-csi:v" $version) }}
           imagePullPolicy: IfNotPresent
           args:
             - "--v=5"
