--- a/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemconfig.yaml
+++ b/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemconfig.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 ---
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -360,6 +361,14 @@ spec:
                       type: string
                     type: array
                 type: object
+              provisioningUtility:
+                default: cloud-init
+                description: ProvisioningConfig is used for configurating the worker
+                  node. Defaults to cloud-init.
+                enum:
+                - cloud-init
+                - ignition
+                type: string
             required:
             - bootstrapConfig
             - cloudProvider
