--- a/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemprofile.yaml
+++ b/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemprofile.yaml
@@ -460,6 +460,14 @@ spec:
                       type: object
                     type: array
                 type: object
+              provisioningUtility:
+                default: cloud-init
+                description: ProvisioningConfig is used for configurating the worker
+                  node. Defaults to cloud-init.
+                enum:
+                - cloud-init
+                - ignition
+                type: string
               supportedCloudProviders:
                 description: SupportedCloudProviders represent the cloud providers
                   that support the given operating system version
