--- a/pkg/resources/test/fixtures/deployment-azure-1.24.0-operating-system-manager.yaml
+++ b/pkg/resources/test/fixtures/deployment-azure-1.24.0-operating-system-manager.yaml
@@ -60,7 +60,7 @@ spec:
             secretKeyRef:
               key: subscriptionID
               name: cloud-credentials
-        image: quay.io/kubermatic/operating-system-manager:v1.2.0
+        image: quay.io/kubermatic/operating-system-manager:07720b8706ee5b2f1bbf6c30b818c69b9135c148
         livenessProbe:
           failureThreshold: 3
           httpGet:
