Update OSM to latest commit (#12061)
* Update OSM to latest commit

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Update CRDs

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactored code

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

---------

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemconfig.yaml
+++ b/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemconfig.yaml
@@ -360,6 +360,14 @@ spec:
                       type: string
                     type: array
                 type: object
+              provisioningUtility:
+                default: cloud-init
+                description: ProvisioningConfig is used for configurating the worker
+                  node. Defaults to cloud-init.
+                enum:
+                - cloud-init
+                - ignition
+                type: string
             required:
             - bootstrapConfig
             - cloudProvider
