--- a/pkg/resources/test/fixtures/deployment-azure-1.25.0-operating-system-manager.yaml
+++ b/pkg/resources/test/fixtures/deployment-azure-1.25.0-operating-system-manager.yaml
@@ -60,7 +60,7 @@ spec:
             secretKeyRef:
               key: subscriptionID
               name: cloud-credentials
-        image: quay.io/kubermatic/operating-system-manager:v1.2.0
+        image: quay.io/kubermatic/operating-system-manager:fefdb70fecee30d6c08615c83446b3ea1e60c161
         livenessProbe:
           failureThreshold: 3
           httpGet:
