--- a/charts/s3-exporter/values.yaml
+++ b/charts/s3-exporter/values.yaml
@@ -16,6 +16,11 @@ s3Exporter:
   image:
     repository: quay.io/kubermatic/s3-exporter
     tag: v0.6
+    # list of image pull secret references, e.g.
+  # imagePullSecrets:
+  #   - name: quay-io-pull-secret
+  imagePullSecrets: []
+
   endpoint: http://minio.minio.svc.cluster.local:9000
   bucket: kubermatic-etcd-backups
   # uncomment this and create a ConfigMap with a "cabundle.pem" in it,
